--- a/compiler/cpp/Makefile.am
+++ b/compiler/cpp/Makefile.am
@@ -78,6 +78,7 @@ thrift_SOURCES += src/thrift/generate/t_c_glib_generator.cc \
                   src/thrift/generate/t_erl_generator.cc \
                   src/thrift/generate/t_go_generator.cc \
                   src/thrift/generate/t_go_generator.h \
+                  src/thrift/generate/t_grpc_generator.cc \
                   src/thrift/generate/t_gv_generator.cc \
                   src/thrift/generate/t_haxe_generator.cc \
                   src/thrift/generate/t_html_generator.cc \
